--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/CFC-Servers/wisp_addon_manager_action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@types/node": "^20.5.9",
     "typescript": "^5.2.2",
     "wisp_addon_manager": "github:CFC-Servers/wisp_addon_manager"
   }
