--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@types/node": "^20.5.9",
+    "node-fetch": "^3.3.2",
     "typescript": "^5.2.2",
     "wisp_addon_manager": "github:CFC-Servers/wisp_addon_manager"
   }
