--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
+      "lib": ["es2021"],
+    "target": "es2021",
+    "module": "node16",
     "declaration": true,
     "outDir": "./dist/",
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
 
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node16"
   }
 }
