--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "lib": ["es2022"],
     "target": "es2022",
-    "module": "node16",
+    "module": "ESNext",
     "declaration": true,
     "outDir": "./dist/",
     "forceConsistentCasingInFileNames": true,
 
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node"
   }
 }
